--- a/l10n_es_aeat_vat_prorrate/views/mod303_view.xml
+++ b/l10n_es_aeat_vat_prorrate/views/mod303_view.xml
@@ -11,16 +11,14 @@
                     <field name="casilla_44"
                            widget="monetary"
                            options="{'currency_field': 'currency_id'}"
-                           attrs="{'invisible': ['|', ('vat_prorrate_type', '!=', 'general'), ('period_type', 'not in', ['4T', '12'])]}"
+                           attrs="{'invisible': ['|', ('vat_prorrate_type', 'not in', ['general','special']), ('period_type', 'not in', ['4T', '12'])]}"
                             />
                 </field>
                 <field name="type" position="after">
                     <field name="vat_prorrate_type"/>
                     <label for="vat_prorrate_percent"
-                           attrs="{'invisible': [('vat_prorrate_type', '!=', 'general')]}"
                             />
-                    <div class="oe_inline"
-                         attrs="{'invisible': [('vat_prorrate_type', '!=', 'general')]}">
+                    <div class="oe_inline">
                         <field name="vat_prorrate_percent"
                                attrs="{'required': [('vat_prorrate_type', '=', 'general')]}"
                                class="oe_inline"
