--- a/l10n_es_aeat_mod303/views/mod303_view.xml
+++ b/l10n_es_aeat_mod303/views/mod303_view.xml
@@ -91,12 +91,12 @@
                                 />
                         <field name="result_type"/>
                         <field name="compensate"
-                               attrs="{'invisible': [('result_type', '!=', 'B')]}"
+                               attrs="{'invisible': [('result_type', '!=', 'D')]}"
                                 />
                         <field name="company_partner_id" invisible="1"/>
                         <field name="bank_account"
                                domain="[('partner_id', '=', company_partner_id)]"
-                               attrs="{'invisible': [('result_type', 'not in', ('B', 'I')), ('compensate', '=', False)]}"
+                               attrs="{'invisible': [('result_type', 'not in', ('D', 'I')), ('compensate', '=', False)]}"
                                 />
                     </group>
                     <group string="Tax lines"
